# SDU_virtual_machine

./: .gitignore  CMakeLists.txt  README.md
include/: ALU.h  CU.h  Computer.h  In.h  Memory.h  Out.h  types.h
src/: ALU.cpp  CU.cpp  Computer.cpp  In.cpp  Memory.cpp  Out.cpp  main.cpp
